--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,17 @@ nav {
 	padding: 0;
 }
 
-nav ul {
-	padding: 10px 20px;
+ nav#horzl ul li {
+	 float: right;
+	 margin: 0 15px;
+ }
+ 
+
+nav {
+	list-style-type: square;
+	padding: 0;
+	margin: 0;
+	overflow: hidden;	
 }
 
 nav a {
@@ -21,6 +30,7 @@ nav ul {
 		display: block;
 		text-align: center;
 }
+
 
 aside {
 	position: fixed;
