css code aligned

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
-	#main-navbar {
-	background-color:blue;
-	overflow:hidden;
+#main-navbar {
+		background-color:blue;
+		overflow:hidden;
 	}
 
-	#navbar-container {
+#navbar-container {
+		float: left;
 		width: 100%;
 		position: relative;
 	}
-
-	#main-navbar ul {
+	
+#main-navbar ul {
 		list-style-type:none;
 		margin: 0;
 		padding: 0;
@@ -18,7 +19,7 @@
 	 
 	}
 
-	#main-navbar ul li {
+#main-navbar ul li {
 	 float: left;
 	 position:relative;
 	 right: 50%;
@@ -26,37 +27,37 @@
  
  }
  
-	#main-navbar ul li a:hover; {
-	background-color:#000;
+#main-navbar ul li a:hover; {
+		background-color:#000;
 	}
 
-	#onpage {
-	text-decoration: underline overline;
+#onpage {
+		text-decoration: underline overline;
 	}
 
-	#sidebar{
-	position: fixed;
-	right: 0%;
-	background-color:red;
-	height: 100%;
-	width: 20%;
+#sidebar{
+		position: fixed;
+		right: 0%;
+		background-color:red;
+		height: 100%;
+		width: 20%;
 	}
 
-	#sidebar ul {
-	list-style-type: none;
-	text-align: center;
-	padding: 0;
+#sidebar ul {
+		list-style-type: none;
+		text-align: center;
+		padding: 0;
 }
 
-	#sidebar ul li a {
-	display: block;
-	padding: 15px 0;
-	color: #fff;
-	text-decoration: none;
+#sidebar ul li a {
+		display: block;
+		padding: 15px 0;
+		color: #fff;
+		text-decoration: none;
 	}
 
-	#sidebar ul li a:hover {
-	background-color: #000;
+#sidebar ul li a:hover {
+		background-color: #000;
 }
 
 
