updated css syntax

--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,18 @@
 	}
 
 #main-navbar ul li {
-	 float: left;
-	 position:relative;
-	 right: 50%;
-	 display: block;
+		display: block;
  
  }
 
 #main-navbar ul li a {
-	display: block;
-	padding: 10px 20px;
-	color: #fff;
-	text-decoration: none;
+		display: block;
+		padding: 10px 20px;
+		color: #fff;
+		text-decoration: none;
 	}
  
-#main-navbar ul li a:hover; {
+#main-navbar ul li a:hover {
 		background-color:#000;
 	}
 
