--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 #main-navbar {
 	background-color:green;
 	overflow:hidden;
+	font-style: italic;
+	font-size: 16px
+	font-weight: bold;
 }
 
 #navbar-container {
@@ -54,6 +57,9 @@
 	list-style-type: none;
 	text-align: center;
 	padding: 0;
+	font-style: oblique;
+	font-size: 16px
+	font-weight: bold;
 }
 
 #sidebar ul li a {
