--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	background-color:green;
 	overflow:hidden;
 	font-style: italic;
-	font-size: 16px
+	font-size: 16px;
 	font-weight: bold;
 }
 
@@ -47,8 +47,8 @@
 
 #sidebar{
 	position: fixed;
-	right: 0%;
-	background-color:block;
+	right: 0;
+	background-color:black;
 	height: 100%;
 	width: 20%;
 }
