--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@
 #sidebar{
 	position: fixed;
 	right: 0;
-	background-color:black;
+	background-color:yellow;
 	height: 100%;
 	width: 20%;
 	font-style: oblique;
