--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,10 @@
 #sidebar{
 	position: fixed;
 	right: 0;
-	background-color:yellow;
+	background-color:black;
 	height: 100%;
 	width: 20%;
 	font-style: oblique;
-	color: blue;
 }			 
 
 #sidebar ul {
